Clean codes